[gd_scene load_steps=3 format=3 uid="uid://bwwpjjk63brog"]

[ext_resource type="PackedScene" uid="uid://b2b1kcbmfqbxk" path="res://src/interactables/interactable_base.tscn" id="1_t18f3"]
[ext_resource type="Script" uid="uid://bivwax5ms0f58" path="res://src/interactables/audio/audio_interactable.gd" id="2_rpnar"]

[node name="AudioInteractable" instance=ExtResource("1_t18f3")]
offset_right = 372.0
offset_bottom = 23.0
script = ExtResource("2_rpnar")

[node name="TimeSlider" type="HSlider" parent="." index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.001
editable = false

[node name="FileNameLabel" type="Label" parent="TimeSlider" index="0"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -5.0
offset_right = 1.0
offset_bottom = 2.0
text = "---"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicControlButton" type="Button" parent="." index="2"]
layout_mode = 2
disabled = true
toggle_mode = true
text = "Play"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="3"]
